 
PNRStatusAppV3 3.1.86 [August 2013]
 - [CHANGED]	Able to reflect settings changes for 
 - [OPTIMIZED]	Layout Optimizations
 - [ADDED]		Dark Message image for no PNR messages found
 - [CHANGED]	PNR Buttons are now image buttons
 - [ADDED]		Settings with icon moved to actionbar if supported 
 
PNRStatusAppV3 3.1.92 [October 2013]
 - [ADDED]		Add icon for the add prn button
 - [CHANGED]	Moved resources to XMLs
 - [CHANGED]	Hero screen layout
 - [ADDED]		Disabled state for the Info button
 - [CHANGED]	The Ticket details Popup is standardized
 
PNRStatusAppV3 3.1.95 [November 2013]
 - [CHANGED]	Build target API is 18
 - [CHANGED]	Minor layout tweaks
 - [CHANGED]	Minor message change
 
PNRStatusAppV3 3.1.97 [December 2013]
 - [CHANGED]	File organization
 - [CHANGED]	App Icon change
 
PNRStatusAppV3 3.1.98 [December 2013]
 - [ADDED]	Workarounds to work with indianrail

==============================
Version 3.2 Code named Marvin2
==============================
 
PNRStatusAppV3 3.2.10 [March 2014]
 - [CHANGED]	Using apache http client for network
 - [CHANGED]	Exception handling
 - [CHANGED]	UI Tweaks
 
PNRStatusAppV3 3.2.18 [March 2014]
 - [ADDED]		Custom header for ticket info dialog, which includes the share icon
 - [CHANGED]	Reset status when check button is clicked
 - [OPTIMIZED]	Code cleanup
 - [ADDED]		Apache HttpClient for http operations

PNRStatusAppV3 3.2.25 [March 2014]
 - [ADDED]		PNRStatusService
 - [CHANGED]	No highlight color when list is highlighted 
 - [CHANGED]	Text resources and layouts
 - [ADDED]		Logger wrapper to log data only in development mode
 - [CHANGED]	Code Cleanup

PNRStatusAppV3 3.2.30 [March 2014]
 - [ADDED]		Tips section in about screen
 - [CHANGED]	to PagerTabStrip
 - [CHANGED]	Default service to PNR Status Service
 - [CHANGED]	Order of status services in preference page
 - [ADDED]		Prevent adding same pnr number again
 - [ADDED]		Basic support for tablet screen
 
PNRStatusAppV3 3.2.40 [April 2014]
 - [ADDED]		Tablet screen optimizations