@@ -1,8 +1,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="2dip"
-    android:padding="5dip" >
+    android:layout_margin="4dip"
+    android:padding="8dip" >
 
     <TextView
         android:id="@+id/messageItemPnr"
